refactor to add events and Pebble (gui)

--- a/by-feature/app-dependencies.gradle
+++ b/by-feature/app-dependencies.gradle
@@ -3,7 +3,8 @@ dependencies {
 
     //implementation project(':by-feature-common')
 
-    implementation project(':by-feature-person')
-    implementation project(':by-feature-pet')
+    implementation project(':by-feature-gui')
+//    implementation project(':by-feature-person')
+//    implementation project(':by-feature-pet')
 
 }
