--- a/by-feature/src/main/resources/application-default.properties
+++ b/by-feature/src/main/resources/application-default.properties
@@ -1,4 +1,6 @@
 
+server.servlet.context-path=/by-feature
+
 spring.datasource.url=jdbc:h2:mem:byfeature
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -9,5 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
 
-spring.freemarker.template-loader-path=classpath:/templates
-spring.freemarker.suffix=.ftl
+#spring.freemarker.template-loader-path=classpath:/templates
+#spring.freemarker.suffix=.ftl
+
+pebble.suffix=.html
