--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.spring.dependency-management'    version "$dependencyManagementVersion"
     //id 'war'
     //id 'groovy'
-    id 'java-library'
+    //id 'java-library'
 }
 
 repositories {
@@ -56,7 +56,7 @@ subprojects { Project project ->
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation 'org.springframework.boot:spring-boot-starter-freemarker'
+        //implementation 'org.springframework.boot:spring-boot-starter-freemarker'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     }
