--- a/by-feature/build.gradle
+++ b/by-feature/build.gradle
@@ -1,9 +1,9 @@
 plugins {
 //	id 'org.springframework.boot' version "$springbootVersion"
 //	id 'io.spring.dependency-management' version "$dependencyManagementVersion"
-	id 'war'
+//	id 'war'
 //	id 'groovy'
-//	id 'application'
+	id 'application'
 
 }
 
@@ -22,7 +22,7 @@ bootJar {
 
 
 jar {
-	enabled = false
+	enabled = true
 }
 
 
@@ -31,7 +31,7 @@ dependencies {
 
 	//implementation 'org.springframework.boot:spring-boot-starter-web'
 	//implementation 'org.codehaus.groovy:groovy'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
 	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
