added ast transformations, v2

--- a/by-feature/app-dependencies.gradle
+++ b/by-feature/app-dependencies.gradle
@@ -5,6 +5,8 @@ dependencies {
 
     implementation project(':by-feature-gui')
     implementation project(':by-feature-gui-pebble')
+
+    implementation project(':by-feature-petclinic')
 //    implementation project(':by-feature-person')
 //    implementation project(':by-feature-pet')
 
