blaze scripts added

--- a/by-feature/src/main/resources/application-default.properties
+++ b/by-feature/src/main/resources/application-default.properties
@@ -1,7 +1,8 @@
 
 server.servlet.context-path=/by-feature
 
-spring.datasource.url=jdbc:h2:mem:byfeature
+#spring.datasource.url=jdbc:h2:mem:byfeature
+spring.datasource.url=jdbc:h2:~/byfeature.db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=abc123
