--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
+
+
     implementation 'org.springframework.modulith:spring-modulith-starter-core'
     testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
 //    testImplementation 'org.springframework.modulith:spring-modulith-junit'
